modal overflow scrolling fix

--- a/components/modal/_modal.scss
+++ b/components/modal/_modal.scss
@@ -126,6 +126,7 @@
       padding-left: 70px;
       padding-right: 68px;
       padding-bottom: 26px;
+      overflow-y: auto;      
     }
 
     .sdc-modal__footer {
@@ -166,21 +167,49 @@
 
 .xl {
   width: 1200px;
+  .sdc-modal__wrapper {
+    .sdc-modal__content {
+      max-height: 440px;
+    }
+  }
 }
 
 .l {
-  width: 875px;
+  width: 80%;
+  .sdc-modal__wrapper {
+    .sdc-modal__content {
+      max-height: 440px;
+    }
+  }
+ 
 }
 
 .md {
-  width: 650px;
+  width: 540px;
+  .sdc-modal__wrapper {
+    .sdc-modal__content {
+      max-height: 540px;
+      min-height: 64px;
+    }
+  }
 }
 
 .sm {
-  width: 500px;
+  width: 540px;
+  .sdc-modal__wrapper {
+    .sdc-modal__content {
+      max-height: 220px;
+      min-height: 64px;
+    }
+  }
 }
 
 .xsm {
-  width: 432px;
+  width: 500px;
+  .sdc-modal__wrapper {
+    .sdc-modal__content {
+      max-height: 540px;
+    }
+  }
 }
 
